All 4 Activities incorporated with the audiomanager implementation to handle interrupts while audio is playing
The list_item_layout is updated with adding a play icon also the its linearlayout changed to relativelayout

All the mp3 files for the words in all 4 activities added to the raw folder

Every drawable version of the play icon added to the drawable folder

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,48 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/list_item_height"
     android:background="@color/tan_background"
-    android:orientation="horizontal"
     android:minHeight="@dimen/list_item_height">
 
     <ImageView
+        android:id="@+id/list_image"
         android:layout_width="@dimen/list_item_height"
         android:layout_height="@dimen/list_item_height"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/list_image"/>
+        android:src="@mipmap/ic_launcher" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:id="@+id/textContainer"
-        android:orientation="vertical">
+        android:layout_height="@dimen/list_item_height"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/list_image"
+        android:layout_toEndOf="@+id/list_image"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingStart="16dp"
+        android:paddingRight="0dp"
+        android:paddingEnd="0dp">
+
         <TextView
+            android:id="@+id/miwok_word"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="44dp"
             android:gravity="bottom"
-            android:textColor="@android:color/white"
             android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
             android:textStyle="bold"
-            android:text="@string/miwok_word"
-            android:layout_marginLeft="@dimen/list_text_view_left_margin"
-            android:layout_marginStart="@dimen/list_text_view_left_margin"
-            android:id="@+id/miwok_word"/>
+            tools:text="lutti" />
 
         <TextView
+            android:id="@+id/english_word"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="44dp"
+            android:layout_below="@id/miwok_word"
             android:gravity="top"
-            android:textColor="@android:color/white"
             android:textAppearance="?android:textAppearanceMedium"
-            android:text="@string/english_word"
-            android:layout_marginLeft="@dimen/list_text_view_left_margin"
-            android:layout_marginStart="@dimen/list_text_view_left_margin"
-            android:id="@+id/english_word"/>
-    </LinearLayout>
+            android:textColor="@android:color/white"
+            tools:text="one" />
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_play_arrow" />
+    </RelativeLayout>
+</RelativeLayout>
