--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,16 +17,16 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_height"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/list_image"
         android:layout_toEndOf="@+id/list_image"
+        android:layout_toRightOf="@id/list_image"
         android:orientation="vertical"
+        android:paddingEnd="0dp"
         android:paddingLeft="16dp"
-        android:paddingStart="16dp"
         android:paddingRight="0dp"
-        android:paddingEnd="0dp">
+        android:paddingStart="16dp">
 
         <TextView
             android:id="@+id/miwok_word"
@@ -51,11 +51,11 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:src="@drawable/ic_play_arrow" />
     </RelativeLayout>
 </RelativeLayout>
