--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -6,4 +6,4 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:drawSelectorOnTop="true"
-    tools:context="com.example.android.miwok.NumbersActivity" />
+    tools:context="com.example.android.miwok.MainActivity" />
