--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -10,7 +10,7 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_red_light"
+        android:background="@color/primary_dark_color"
         app:tabMode="fixed"
         app:tabSelectedTextColor="#ffff00"
         app:tabTextColor="@android:color/white" />
